--- a/prototypes/mandelbrot2d/CMakeLists.txt
+++ b/prototypes/mandelbrot2d/CMakeLists.txt
@@ -3,6 +3,6 @@ project(MandelBrot2D)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(MandelBrot2D main.cpp)
+add_executable(proto.MandelBrot2D main.cpp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lSDL2")
