--- a/prototypes/vulkan/CMakeLists.txt
+++ b/prototypes/vulkan/CMakeLists.txt
@@ -3,6 +3,6 @@ project(Vulkan)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Vulkan main.cpp)
+add_executable(proto.Vulkan main.cpp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
