--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.13)
 project(MandelBulb)
 
+set(CMAKE_CXX_STANDARD 17)
+
 add_subdirectory("${PROJECT_SOURCE_DIR}/prototypes/mandelbrot2d" "${PROJECT_SOURCE_DIR}/prototypes/mandelbrot2d/cmake-build-debug")
 add_subdirectory("${PROJECT_SOURCE_DIR}/prototypes/vulkan" "${PROJECT_SOURCE_DIR}/prototypes/vulkan/cmake-build-debug")
+add_subdirectory("${PROJECT_SOURCE_DIR}/prototypes/translation" "${PROJECT_SOURCE_DIR}/prototypes/translation/cmake-build-debug")
 
 add_executable(MandelBulb main.cpp)
