--- a/prototypes/opengl/CMakeLists.txt
+++ b/prototypes/opengl/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(Vulkan)
-add_executable(proto.Vulkan main.cpp)
+project(OpenGL)
+add_executable(proto.OpenGL lib/glad.c main.cpp Shader.cpp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lglfw -lGL -ldl")
