Observer and Observable of MVC + some update of the controller

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,6 @@ add_executable(MandelBulb main.cpp ../lib/glad.c engine/Shader.cpp engine/Transf
         engine/HUD.cpp engine/Mesh.cpp engine/Material.cpp engine/Texture.cpp engine/Window.cpp engine/Window.hpp
         ModelPack/Data.cpp ModelPack/Data.hpp ModelPack/Fractal.cpp ModelPack/Fractal.hpp ModelPack/Fractal2D.cpp ModelPack/Fractal2D.hpp
         ModelPack/Fractal3D.cpp ModelPack/Fractal3D.hpp
-        ViewPack/ViewWindow.cpp ViewPack/ViewWindow.hpp)
+        ViewPack/ViewWindow.cpp ViewPack/ViewWindow.hpp ModelPack/Observer.cpp ModelPack/Observer.h ModelPack/Observable.cpp ModelPack/Observable.h)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lglfw -lGL -ldl")
