Class loader changed to DataManager, added some variables to Fractal in order to construct a equation from the json file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 project(MandelBulb)
 add_executable(MandelBulb main.cpp ../lib/glad.c
-        #engine/Camera.cpp engine/Game.cpp engine/GameEngine.cpp engine/HUD.cpp engine/Material.cpp engine/Mesh.cpp
-        #engine/Object.cpp engine/Renderer.cpp engine/Scene.cpp engine/Shader.cpp engine/Texture.cpp engine/Transformation.cpp engine/Window.cpp
+        engine/Camera.cpp engine/Game.cpp engine/GameEngine.cpp engine/HUD.cpp engine/Material.cpp engine/Mesh.cpp
+        engine/Object.cpp engine/Renderer.cpp engine/Scene.cpp engine/Shader.cpp engine/Texture.cpp engine/Transformation.cpp engine/Window.cpp
         ModelPack/Data.cpp ModelPack/Fractal.cpp ModelPack/Fractal2D.cpp ModelPack/Fractal3D.cpp
-        ModelPack/Loader.cpp
+        ModelPack/DataManager.cpp
         ControlerPack/Controller.cpp ControlerPack/DefaultController.cpp ControlerPack/EditController.cpp
         ObserverPack/Observable.cpp ObserverPack/Observer.cpp
         ViewPack/ViewWindow.cpp )
