--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ project(MandelBulb)
 
 set(SOURCE_FILES main.cpp ../lib/glad.c engine/Shader.cpp engine/Transformation.cpp engine/Object.cpp
         engine/Camera.cpp engine/Renderer.cpp engine/GameEngine.cpp engine/WindowOpenGL.cpp engine/Game.cpp engine/Scene.cpp
-        engine/HUD.cpp engine/Mesh.cpp engine/Material.cpp engine/Texture.cpp engine/exceptions/Exception.cpp ViewPack/Application.hpp ViewPack/Application.cpp
+        engine/Mesh.cpp engine/Material.cpp engine/Texture.cpp engine/exceptions/Exception.cpp ViewPack/Application.hpp ViewPack/Application.cpp
         ViewPack/MocWindow.cpp ViewPack/Window.cpp)
 
 add_executable(MandelBulb ${SOURCE_FILES})
