--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ exe:
 tests:
   stage: tests
   script:
+    - mkdir cmake-build-debug
     - cmake -S . -B cmake-build-debug
     - cd cmake-build-debug
     - cmake --build . --target Tests
