--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,8 @@ exe:
 tests:
   stage: tests
   script:
+    - man cmake | echo
+    - cmake -v
     - cmake -S . -B cmake-build-debug
     - cd cmake-build-debug
     - cmake --build . --target Tests
