--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ pages:
 
 build:
   variables:
-    OUTPUT_FILE_NAME: mandelbulb-$CI_COMMIT_REF_NAME.tar.zst
+    OUTPUT_FILE_NAME: mandelbulb-$CI_COMMIT_REF_NAME.tar.gz
   stage: deploy
   script:
 #    - cmake -S . -B cmake-build-debug
@@ -28,7 +28,7 @@ build:
     - cp -r res/ build/
     - g++ -o build/bin/MandelBulb main.cpp ../lib/glad.c engine/Shader.cpp engine/Transformation.cpp engine/Object.cpp engine/Camera.cpp engine/Renderer.cpp engine/GameEngine.cpp engine/Window.cpp engine/Game.cpp engine/Scene.cpp engine/Mesh.cpp engine/Material.cpp engine/Texture.cpp engine/exceptions/Exception.cpp -lglfw -lGL -ldl
     - cd build
-    - tar -caf $OUTPUT_FILE_NAME *
+    - tar czf $OUTPUT_FILE_NAME *
   artifacts:
     paths:
       - src/build/$OUTPUT_FILE_NAME
