--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,31 +17,23 @@ pages:
 
 build:
   variables:
-    OUTPUT_FILE_NAME: mandelbulb-$CI_COMMIT_REF_NAME.tar.gz
+    OUTPUT_FILE: mandelbulb-$CI_COMMIT_REF_NAME.tar.zst
   stage: deploy
   script:
-#    - cmake -S . -B cmake-build-debug
-#    - cd cmake-build-debug
-#    - cmake --build . --target MandelBulb
-    - cd src
-    - mkdir -p build/bin
-    - cp -r res/ build/
-    - g++ -o build/bin/MandelBulb main.cpp ../lib/glad.c engine/Shader.cpp engine/Transformation.cpp engine/Object.cpp engine/Camera.cpp engine/Renderer.cpp engine/GameEngine.cpp engine/Window.cpp engine/Game.cpp engine/Scene.cpp engine/Mesh.cpp engine/Material.cpp engine/Texture.cpp engine/exceptions/Exception.cpp -lglfw -lGL -ldl
-    - cd build
-    - tar czf $OUTPUT_FILE_NAME *
+    - cmake -S . -B cmake-build-debug -DCMAKE_BUILD_TYPE=Release
+    - cmake --build cmake-build-debug --target MandelBulb
+    - mkdir src/cmake-build-debug/bin
+    - mv src/cmake-build-debug/MandelBulb src/cmake-build-debug/bin/
+    - tar caf $OUTPUT_FILE -C src/cmake-build-debug/ bin ../res/
   artifacts:
     paths:
-      - src/build/$OUTPUT_FILE_NAME
+      - $OUTPUT_FILE
   only:
     - tags
 
 tests:
   stage: tests
   script:
-#    - cmake -S . -B cmake-build-debug
-#    - cd cmake-build-debug
-#    - cmake --build . --target Tests
-#    - ../tests/cmake-build-debug/Tests
-    - cd tests
-    - g++ main.cpp ../lib/glad.c ../src/engine/Camera.cpp ../src/engine/Transformation.cpp ../src/engine/Object.cpp ../src/engine/Window.cpp ../src/engine/exceptions/Exception.cpp -o Tests -lgtest -lgtest_main -lglfw -ldl -lGL
-    - ./Tests
+    - cmake -S . -B cmake-build-debug
+    - cmake --build cmake-build-debug --target Tests
+    - ./tests/cmake-build-debug/Tests
