--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,5 +35,6 @@ tests:
   stage: tests
   script:
     - cmake -S . -B cmake-build-debug
+    - cmake --build cmake-build-debug --target MandelBulb
     - cmake --build cmake-build-debug --target Tests
     - ./tests/cmake-build-debug/Tests
